[package]
name = "gossamerd"
version = "0.1.0"
authors = ["Alex Rickabaugh <alx+alxhub@alxandria.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "*"
libgossamer = { path = "../libgossamer" }
tokio = { version = "*", features = ["macros", "stream", "net", "rt-core", "sync", "io-util", "tcp"] }
tokio-util = { version = "*", features = ["codec"] }
futures = "*"